# filetreck_bot

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements.txt
core/: handlers.py
lib/: ftp.py  messages.py  schemas.py  telegram.py
src/: config.py  main.py  pyproject.toml  to_queue.py
src/core/: handlers.py
src/lib/: ftp.py  schemas.py
tests/data/: messages.py
